<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mancala.de.example.mancala.MainActivity">

    <item
        android:id="@+id/ic_menu_play"
        android:icon="@drawable/ic_menu_play"
        android:orderInCategory="100"
        android:title="ic_menu_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/game_rules"
        android:orderInCategory="100"
        android:title="@string/game_rules"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/title_about"
        app:showAsAction="never" />

</menu>
