<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_game_rules_header"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_game_rules" />

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_game_discription" />

    </LinearLayout>
</ScrollView>